# bday

./: Cargo.toml  README.md
.github/workflows/: build.yaml  rust.yaml  test.yaml
src/: cli.rs  config.rs  main.rs  utils.rs
