[package]
name = "rust-birthday"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
chrono-humanize = "0.2.3"
chrono-tz = { version = "0.8.5", features = ["case-insensitive"] }
clap = { version = "4.4.18", features = ["derive"] }
prettytable-rs = "0.10.0"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.10"
