[package]
name = "bday"
version = "0.2.0"
edition = "2021"
authors = ["Matthieu LAURENT"]
description = "Easily remember and see upcoming birthdays 🎂"
readme = "README.md"
license = "GPL-2.0-or-later"
repository = "https://github.com/Matthieu-LAURENT39/bday"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
chrono-humanize = "0.2.3"
chrono-tz = { version = "0.8.5", features = ["case-insensitive"] }
clap = { version = "4.4.18", features = ["derive"] }
directories = "5.0.1"
prettytable-rs = "0.10.0"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.10"

[dev-dependencies]
test-case = "3.3.1"
